--- a/LearningASP/Views/Shared/_Layout.cshtml
+++ b/LearningASP/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                 <li>
                     <a asp-controller="Bakery" asp-action="Index">Bakery</a>
                 </li>
+                <li>
+                    <a asp-controller="ToDoMemo" asp-action="Index">ToDo Session</a>
+                </li>
             </ol>
         </nav>
     </header>
