--- a/LearningASP/Views/Shared/_Layout.cshtml
+++ b/LearningASP/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                     <a asp-controller="Bakery" asp-action="Index">Bakery</a>
                 </li>
                 <li>
-                    <a asp-controller="ToDoMemo" asp-action="Index">ToDo Session</a>
+                    <a asp-controller="ToDoMemo" asp-action="MakeToDo">ToDo Session</a>
                 </li>
             </ol>
         </nav>
